; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_SSL_use_RSAPrivateKey_ASN1.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_SSL_use_RSAPrivateKey_ASN1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_F_SSL_USE_RSAPRIVATEKEY_ASN1 = common dso_local global i32 0, align 4
@ERR_R_ASN1_LIB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SSL_use_RSAPrivateKey_ASN1(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i8*, i8** %6, align 8
  store i8* %11, i8** %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i32* @d2i_RSAPrivateKey(i32* null, i8** %9, i64 %12)
  store i32* %13, i32** %10, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i32, i32* @SSL_F_SSL_USE_RSAPRIVATEKEY_ASN1, align 4
  %17 = load i32, i32* @ERR_R_ASN1_LIB, align 4
  %18 = call i32 @SSLerr(i32 %16, i32 %17)
  store i32 0, i32* %4, align 4
  br label %26

19:                                               ; preds = %3
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = call i32 @SSL_use_RSAPrivateKey(i32* %20, i32* %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @RSA_free(i32* %23)
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %19, %15
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32* @d2i_RSAPrivateKey(i32*, i8**, i64) #1

declare dso_local i32 @SSLerr(i32, i32) #1

declare dso_local i32 @SSL_use_RSAPrivateKey(i32*, i32*) #1

declare dso_local i32 @RSA_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
